[package]
name = "untitled"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
clap = { version = "4.5.31", features = ["derive"] }
rand = "0.8"
windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus"
] }
colored = "2.0"
